--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -3,6 +3,4 @@ Don't want to use sass and simply modify the stylesheet in the old css fashion?
 Just customize your theme here.
 ================================================== */
 
-body {
-    
-}
+body {}
