--- a/assets/css/theme.scss
+++ b/assets/css/theme.scss
@@ -1,3 +1,6 @@
+---
+---
+
 // start content
 
 $green:   #08a057 !default;
@@ -608,5 +611,5 @@ span.navigation:before {
 
 .hover-opacity:hover {
     transition: all .3s;
-    opacity: .8;
+    opacity:.8;
 }
